--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -4,3 +4,18 @@
   }
   text-align: center;
 }
+.download-button {
+  display: inline-block;
+
+  color: #fff;
+  background-color: #0d6efd;
+  padding: 0.4rem 1rem;
+  border-radius: 4px;
+  transition: background-color 0.1s ease;
+  box-sizing: border-box;
+  border: 1px solid #0b5ed7;
+  &:hover {
+    background-color: #0b5ed7;
+    color: #fff;
+  }
+}
