--- a/css/_branding.scss
+++ b/css/_branding.scss
@@ -4,7 +4,7 @@
 
 .branding {
     position: relative;
-    background-image: url(/svg/source/logo-colour.svg);
+    background-image: url(~/static/svg/source/logo-colour.svg);
     background-repeat: no-repeat;
     background-size: contain;
     width: 260px;
@@ -18,7 +18,7 @@
 
 .branding-footer {
     position: relative;
-    background-image: url(/svg/source/logo-white.svg);
+    background-image: url(~/static/svg/source/logo-white.svg);
     background-repeat: no-repeat;
     background-size: contain;
     width: 171px * 1.25;
