--- a/css/_header.scss
+++ b/css/_header.scss
@@ -60,5 +60,11 @@
       margin-left: 2em;
     }
   }
+  @media (max-width: 400px) {
+    nav {
+      margin-right: 0em;
+      margin-left: 0em;
+    }
+  }
 
 }
